--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://github.com/EmiliaZabrzanska/OU_Cosmology">Practical Cosmology in Python<br</a></h2>
+										<h2><a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project">Practical Cosmology in Python<br</a></h2>
 									</header>
-									<a href="https://github.com/EmiliaZabrzanska/OU_Cosmology" class="image fit"><img src="images/Cosmology.jpg" alt="" /></a>
-									<p>Applying practical computational methods to analyse cosmological data.</p>
+									<a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project" class="image fit"><img src="images/Cosmology.jpg" alt="" /></a>
+									<p>Investigating how Baryon Acoustic Oscillations depend on redshift in the Dark Energy Survey Catalogue.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/EmiliaZabrzanska/OU_Cosmology" class="button">View Project</a></li>
+										<li><a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
