--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About Me</a></li>
-							<li><a href="generic.html">Projects</a></li>
-							<li><a href="elements.html">In Progress</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="posts.html">Posts</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/emilia-zabrzanska" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
