--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 									<header>
 										<h2><a href="https://github.com/EmiliaZabrzanska/NPLQ-Revision-App">NPLQ Revision App<br /></a></h2>
 									</header>
-									<a href="https://github.com/EmiliaZabrzanska/NPLQ-Revision-App" class="image fit"><img src="images/Ring.png" alt="" /></a>
+									<a href="https://github.com/EmiliaZabrzanska/NPLQ-Revision-App" class="image fit"><img src="images/projects/Ring.png" alt="" /></a>
 									<p>This project involves the development of a web-based revision tool to support learners preparing for the RLSS National Pool Lifeguard Qualification (NPLQ). It provides flashcards, quizzes, and progress tracking, alongside an admin dashboard for content and user management. The app was built using React, Firebase, and Vercel, and serves as a first full-stack project exploring modern web development practices.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/EmiliaZabrzanska/NPLQ-Revision-App" class="button">View Project</a></li>
@@ -66,7 +66,7 @@
 									<header>
 										<h2><a href="https://github.com/EmiliaZabrzanska/OU_Astrophysics">Observational Astronomy<br /></a></h2>
 									</header>
-									<a href="https://github.com/EmiliaZabrzanska/OU_Astrophysics" class="image fit"><img src="images/telescope.png" alt="" /></a>
+									<a href="https://github.com/EmiliaZabrzanska/OU_Astrophysics" class="image fit"><img src="images/projects/telescope.png" alt="" /></a>
 									<p>This project aims to investigate variations in the transit photometry of a known transiting exoplanet by conducting time-series photometry at OSO facilities, comparing new and existing data, and interpreting the findings within the context of scientific literature, culminating in a detailed written report.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/EmiliaZabrzanska/OU_Astrophysics" class="button">View Project</a></li>
@@ -76,7 +76,7 @@
 									<header>
 										<h2><a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project">Practical Cosmology in Python<br /></a></h2>
 									</header>
-									<a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project" class="image fit"><img src="images/planet.png" alt="" /></a>
+									<a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project" class="image fit"><img src="images/projects/planet.png" alt="" /></a>
 									<p>Investigating how Baryon Acoustic Oscillations depend on redshift in the Dark Energy Survey Catalogue.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/EmiliaZabrzanska/Cosmology-BAO-Project" class="button">View Project</a></li>
@@ -86,7 +86,7 @@
 									<header>
 										<h2><a href="https://github.com/EmiliaZabrzanska/OU_Year2">Playground Swing Safety Zone<br /></a></h2>
 									</header>
-									<a href="https://github.com/EmiliaZabrzanska/OU_Year2" class="image fit"><img src="images/swing.png" alt="" /></a>
+									<a href="https://github.com/EmiliaZabrzanska/OU_Year2" class="image fit"><img src="images/projects/swing.png" alt="" /></a>
 									<p>Modelling the landing area around swings through mathematical calculations.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/EmiliaZabrzanska/OU_Year2" class="button">See Report</a></li>
